syntax = "proto3";

// Provider: aws 5.2.0
package terraform.aws.datasources.v5;

import "terraform/v1/meta.proto";

// AwsCloudcontrolapiResource version is 0
message AwsCloudcontrolapiResource {
  string id = 1;

  string identifier = 2;

  string properties = 3;

  string role_arn = 4 [json_name = "role_arn"];

  string type_name = 5 [json_name = "type_name"];

  string type_version_id = 6 [json_name = "type_version_id"];

  map<string, string> for_each = 7 [json_name = "for_each"];

  repeated string depends_on = 8 [json_name = "depends_on"];

  int32 count = 9;

  string provider = 10;

  terraform.v1.Lifecycle lifecycle = 11;
}
