syntax = "proto3";

// Provider: aws 5.2.0
package terraform.aws.resources.v5;

import "terraform/v1/meta.proto";

// AwsKeyPair version is 1
message AwsKeyPair {
  string arn = 1;

  string fingerprint = 2;

  string id = 3;

  string key_name = 4 [json_name = "key_name"];

  string key_name_prefix = 5 [json_name = "key_name_prefix"];

  string key_pair_id = 6 [json_name = "key_pair_id"];

  string key_type = 7 [json_name = "key_type"];

  string public_key = 8 [json_name = "public_key"];

  map<string, string> tags = 9;

  map<string, string> tags_all = 10 [json_name = "tags_all"];

  map<string, string> for_each = 11 [json_name = "for_each"];

  repeated string depends_on = 12 [json_name = "depends_on"];

  int32 count = 13;

  string provider = 14;

  terraform.v1.Lifecycle lifecycle = 15;
}
